--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>룰루랄라 옹당옹당</title>
+<title>화이트데이 이벤트</title>
 
 <style>
 * { box-sizing: border-box; }
@@ -172,7 +172,7 @@ h1{
 
 <div class="card">
   <h1>
-    비록 내가 펌이 안어울리지만..<br>
+    비록 내가 펌이 어울리진 않지만..<br>
     나나펌 도전해볼까???
   </h1>
 
@@ -182,10 +182,10 @@ h1{
   </div>
 
   <div class="result" id="result">
-    ❤️ 이지옹 나나펌 확정 ❤️
+    ❤️ 지옹이 나나펌 확정 ❤️
   <div class="card">
     <h1>
-      비록 내가 펌이 안어울리지만..<br>
+      비록 내가 펌이 어울리진 않지만..<br>
       나나펌 도전해볼까???
     </h1>
 
@@ -194,7 +194,7 @@ h1{
       <button class="btn no" id="noBtn" type="button">No</button>
     </div>
 
-    <div class="result" id="result">❤️ 이지옹 나나펌 확정 ❤️</div>
+    <div class="result" id="result">❤️ 지옹이 나나펌 확정 ❤️</div>
   </div>
 </div>
 
